--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/chinhhiep996/messaging-application#readme",
   "dependencies": {
+    "ejs": "^2.5.7",
     "express": "^4.17.1",
+    "express-ejs-extend": "0.0.1",
     "mongoose": "^4.13.9"
   },
   "devDependencies": {
