--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "mongoose": "^4.13.9",
+    "nodemailer": "^4.4.2",
+    "nodemailer-smtp-transport": "^2.7.4",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
