--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "mongoose": "^4.13.9",
     "nodemailer": "^4.4.2",
     "nodemailer-smtp-transport": "^2.7.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
